# pantry

./: .gitignore  AGENTS.md  CLAUDE.md  ETHICS.md  README.md  package.json  pnpm-lock.yaml
.claude/: parity-map.json  settings.json
.claude/agents/: meta-practices.md  soul-reviewer.md
.claude/hooks/: pre-block-gosum.fish  stop-doc-sync.fish  stop-parity-check.fish
.claude/rules/: context7.md  testing.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
berrygems/: AGENTS.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tests.json  vitest.config.ts
berrygems/extensions/: ask.ts  digestion-settings.ts  dots-panels.ts  dragon-breath.ts  dragon-curfew.ts  dragon-digestion.ts  dragon-herald.ts  dragon-image-fetch.ts  dragon-inquiry.ts  dragon-lab.ts  dragon-musings.ts  dragon-parchment.ts  dragon-scroll.ts  dragon-tongue.ts  kitty-gif-renderer.ts  kobold-housekeeping.ts  lint-panel.ts  popup.ts  todo-lists.ts
berrygems/lib/: ally-taxonomy.ts  animated-image-player.ts  animated-image.ts  compaction-templates.ts  cooldown.ts  giphy-source.ts  globals.ts  id.ts  local-server.ts  lsp-client.ts  panel-chrome.ts  pi-spawn.ts  settings.ts  sse-client.ts
berrygems/styles/: formal.md  friendly.md  minimal.md  (+2 more)
cc-plugin/: .mcp.json  AGENTS.md
dragon-cubed/: .gitignore  AGENTS.md  README.md  settings.gradle.kts
dragon-daemon/: .golangci.yml  go.mod  go.sum  main.go
dragon-forge/: run.fish  train.py
extensions/: ask.ts  digestion-settings.ts  panel-manager.ts  todo-lists.ts
morsels/: AGENTS.md  package.json
psi/: CMakeLists.txt
psi/qml/: ConnectionBar.qml  ConversationStream.qml  DotMessageDelegate.qml  InputBar.qml  Main.qml  QuestEventDelegate.qml  StatePanel.qml  StoneDelegate.qml  StreamFilter.qml  SummaryDelegate.qml  ThoughtDelegate.qml
psi/src/: conversationmodel.cpp  conversationmodel.h  daemonstate.cpp  daemonstate.h  main.cpp  mcpclient.cpp  mcpclient.h  sseconnection.cpp  sseconnection.h  stonepoller.cpp  stonepoller.h  themeengine.cpp  themeengine.h  thoughtmodel.cpp  thoughtmodel.h
storybook-daemon/: .golangci.yml  AGENTS.md  go.mod  go.sum  main.go
(+325 files in other folders)
